@@ -61,6 +61,7 @@ Bug fixes:
 - Fix isSelfSkill with area-skill attackSkillSlot skills.
 - Fix $char->{guild} autovivification causing the bot to think you're in
   a guild when you are not.
+- Fix avoidGM_namePattern, it should work now for nearby GMs.
 
 New features:
 - Better support for detecting dead players.
